// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStepsNav renders assisted tests: getRenderNavLink 1`] = `
<RequirementLink
  link={
    Object {
      "description": <div>
         assessment-1-step-1 description
      </div>,
      "forceAnchor": true,
      "index": 1,
      "key": "assessment-1-step-1",
      "name": "assessment-1-step-1-name",
      "renderRequirementDescription": [Function],
      "url": "",
    }
  }
  renderRequirementDescription={[Function]}
  status={1}
/>
`;

exports[`TestStepsNav renders assisted tests: render 1`] = `
<StyledNavBase
  ariaLabel="test"
  className="test-step-nav"
  groups={
    Array [
      Object {
        "links": Array [
          Object {
            "description": <div>
               assessment-1-step-1 description
            </div>,
            "forceAnchor": true,
            "index": 1,
            "key": "assessment-1-step-1",
            "name": "assessment-1-step-1-name",
            "renderRequirementDescription": [Function],
            "title": "assessment-1-step-1-name. unknown. some test step description",
            "url": "",
          },
          Object {
            "description": <div>
               assessment-1-step-2 description
            </div>,
            "forceAnchor": true,
            "index": 2,
            "key": "assessment-1-step-2",
            "name": "assessment-1-step-2-name",
            "renderRequirementDescription": [Function],
            "title": "assessment-1-step-2-name. passed. some test step description",
            "url": "",
          },
          Object {
            "description": <div>
               assessment-1-step-3 description
            </div>,
            "forceAnchor": true,
            "index": 3,
            "key": "assessment-1-step-3",
            "name": "assessment-1-step-3-name",
            "renderRequirementDescription": [Function],
            "title": "assessment-1-step-3-name. unknown. some test step description",
            "url": "",
          },
        ],
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]}
  selectedKey="assessment-1-step-1"
/>
`;

exports[`TestStepsNav renders automated tests: getRenderNavLink 1`] = `
<RequirementLink
  link={
    Object {
      "description": null,
      "forceAnchor": true,
      "index": 1,
      "key": "assessment-3-step-2",
      "name": "assessment-3-step-2-name",
      "renderRequirementDescription": [Function],
      "url": "",
    }
  }
  renderRequirementDescription={[Function]}
  status={1}
/>
`;

exports[`TestStepsNav renders automated tests: render 1`] = `
<StyledNavBase
  ariaLabel="test"
  className="test-step-nav"
  groups={
    Array [
      Object {
        "links": Array [
          Object {
            "description": null,
            "forceAnchor": true,
            "index": 1,
            "key": "assessment-3-step-2",
            "name": "assessment-3-step-2-name",
            "renderRequirementDescription": [Function],
            "title": "assessment-3-step-2-name. unknown. some test step description",
            "url": "",
          },
          Object {
            "description": null,
            "forceAnchor": true,
            "index": 2,
            "key": "assessment-3-step-1",
            "name": "assessment-3-step-1-name",
            "renderRequirementDescription": [Function],
            "title": "assessment-3-step-1-name. passed. some test step description",
            "url": "",
          },
        ],
      },
    ]
  }
  onLinkClick={[Function]}
  onRenderLink={[Function]}
  selectedKey="assessment-3-step-2"
/>
`;
